test: pthread id

--- a/test/makefile
+++ b/test/makefile
@@ -1,6 +1,7 @@
 # Thanks to Job Vranish (https://spin.atomicobject.com/2016/08/26/makefile-c-projects/)
 PROGS := test_select_cli test_echo_server \
-			test_nonblockwrite_cli test_nonblockwrite_server
+			test_nonblockwrite_cli test_nonblockwrite_server \
+			test_pthread
 
 CC = gcc
 CFLAGS = -I../lib -g -O2  -Wall
@@ -19,6 +20,10 @@ test_nonblockwrite_server: test_nonblockwrite_server.c
 test_nonblockwrite_cli: test_nonblockwrite_cli.c
 	${CC} ${CFLAGS} $^ -o $@
 
+test_pthread: test_pthread.c
+	${CC} ${CFLAGS} $^ -o $@
+
 clean:
 	rm -f test_select_cli test_echo_server 
 	rm -f test_nonblockwrite_cli test_nonblockwrite_server
+	rm -f test_pthread
