test: print local time

--- a/test/makefile
+++ b/test/makefile
@@ -1,7 +1,8 @@
 # Thanks to Job Vranish (https://spin.atomicobject.com/2016/08/26/makefile-c-projects/)
 PROGS := test_select_cli test_echo_server \
 			test_nonblockwrite_cli test_nonblockwrite_server \
-			test_pthread
+			test_pthread \
+			test_localtime
 
 CC = gcc
 CFLAGS = -I../lib -g -O2  -Wall
@@ -23,7 +24,11 @@ test_nonblockwrite_cli: test_nonblockwrite_cli.c
 test_pthread: test_pthread.c
 	${CC} ${CFLAGS} $^ -o $@
 
+test_localtime: test_localtime.c
+	${CC} ${CFLAGS} $^ -o $@
+
 clean:
 	rm -f test_select_cli test_echo_server 
 	rm -f test_nonblockwrite_cli test_nonblockwrite_server
 	rm -f test_pthread
+	rm -f test_localtime
