test: http parser case

--- a/test/makefile
+++ b/test/makefile
@@ -3,7 +3,8 @@ PROGS := test_select_cli test_echo_server test_echo_cli\
 			test_nonblockwrite_cli test_nonblockwrite_server \
 			test_pthread \
 			test_localtime \
-			test_epoll_server
+			test_epoll_server \
+			test_http_parser_server
 
 CC = gcc
 CFLAGS = -I../lib -g -O2  -Wall
@@ -34,6 +35,10 @@ test_localtime: test_localtime.c
 test_epoll_server: test_epoll_server.c
 	${CC} ${CFLAGS} $^ -o $@
 
+test_http_parser_server: test_http_parser_server.c http_parser.c 
+	${CC} ${CFLAGS} $^ -o $@
+
+
 clean:
 	rm -f test_select_cli test_echo_server 
 	rm -f test_nonblockwrite_cli test_nonblockwrite_server
@@ -41,3 +46,4 @@ clean:
 	rm -f test_localtime
 	rm -f test_epoll_server
 	rm -f test_echo_cli
+	rm -f test_http_parser_server
